<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bible</string>
    <string name="about_contact_us_text">CONTACT US</string>
    <string name="highlight_stabilo">Highlight</string>
    <string name="menuDonasi">Donation</string>
    <string name="menuSupport">Support</string>
    <string name="mengimpor_titiktiga">Restoring…</string>
    <string name="mengekspor_titiktiga">Creating backup…</string>
    <string name="bagikan_renungan">Share devotion</string>
    <string name="renungan_sudah_disalin">Devotion has been copied.</string>
    <string name="salin_renungan">Copy devotion</string>
    <string name="ekspor_berhasil_file_yang_dihasilkan_file">Backup was successful.\n\nResults are in file: %s</string>
    <string name="impor_berhasil_angka_diproses">Restore was successful. In total %1$d bookmarks, notes, and/or highlights, and also %2$d labels were processed.</string>
    <string name="terjadi_kesalahan_ketika_mengekspor_pesan">There were error(s) when creating backup: %s</string>
    <string name="ekspor_pembatas_buku_dan_catatan_tanya">Create backup of bookmarks, notes, and highlights to SD Card or USB Storage? Existing backups will be overwritten.</string>
    <string name="terjadi_kesalahan_ketika_mengimpor_pesan">There were error(s) when restoring: %s</string>
    <string name="apakah_anda_mau_menumpuk_pembatas_buku_dan_catatan_tanya">Overwrite the bookmarks, notes, and highlights you currently have?</string>
    <string name="file_tidak_bisa_dibaca_file">The file does not exist or could not be read: %s</string>
    <string name="impor_dari_sd_card">Restore</string>
    <string name="ekspor_ke_sd_card">Backup</string>
    <string name="menuBantuan">Help</string>
    <string name="beri_saran_title">Suggest</string>
    <string name="menuDevotion">Devotion</string>
    <string name="search">Search</string>
    <string name="activity_title_markers">Markers</string>
    <string name="menu_markers">Markers</string>
    <string name="hapus_pembatas_buku">Delete bookmark</string>
    <string name="menuShare">Share</string>
    <string name="menuShareSplit0">Share primary version</string>
    <string name="menuShareSplit1">Share secondary version</string>
    <string name="menuShareBothSplits">Share both versions</string>
    <string name="tulis_catatan">Note</string>
    <string name="tambah_pembatas_buku">Bookmark</string>
    <string name="salin_ayat">Copy verse</string>
    <string name="copy_split0">Copy primary version</string>
    <string name="copy_split1">Copy secondary version</string>
    <string name="copy_both_splits">Copy both versions</string>
    <string name="search_copy_selected_verses">Copy selected verses</string>
    <string name="perj_baru">New Test.</string>
    <string name="perj_lama">Old Test.</string>
    <string name="search_bookname_only">%s only</string>
    <string name="ayat_sebelumangka">Verse</string>
    <string name="pasal_sebelumangka">Chapter</string>
    <string name="jump_to_prompt"><b>JUMP TO</b> — Example: ^1</string>
    <string name="belum_ada_pembatas_buku">No bookmarks yet.\nSelect a verse to add a bookmark.</string>
    <string name="judul_titikdua">Title</string>
    <string name="devotion_downloader_downloading_title">Downloading ^1</string>
    <string name="devotion_downloader_downloading_date">dated ^1</string>
    <string name="devotion_downloader_error_date">Error in date ^1: ^2</string>
    <string name="devotion_downloader_success_date">Downloadeded date ^1</string>
    <string name="belum_tersedia_mungkin_tanggal_yang_diminta_belum_disiapkan">Not yet available. Probably the requested date\'s material is not prepared yet, or there are some errors in recognizing the data source. Please try again later.</string>
    <string name="belum_tersedia_menunggu_pengambilan_data_lewat_internet_pastikan_ada">Not yet available. Fetching from the Internet…\n\n(Ensure there is Internet connection to fetch the devotion materials.)</string>
    <string name="hari_sabtu">Sat</string>
    <string name="hari_jumat">Fri</string>
    <string name="hari_kamis">Thu</string>
    <string name="hari_rabu">Wed</string>
    <string name="hari_selasa">Tue</string>
    <string name="hari_senin">Mon</string>
    <string name="hari_minggu">Sun</string>
    <string name="size_hasil">%d results</string>
    <string name="search_searching_tokens">Searching for verses containing %s…</string>
    <string name="pilih_setidaknya_satu_kitab">Choose at least one book to search.</string>
    <string name="pengunduhan_dibatalkan">Download canceled.</string>
    <string name="sedang_mendekompres_harap_tunggu">Decompressing. Please wait…</string>
    <string name="terunduh_sampe_byte">Downloaded: %d bytes</string>
    <string name="gagal_mengunduh_edisi_judul_ex_pastikan_internet">Failed in downloading version: %1$s (%2$s).\nMake sure that Internet is working correctly.</string>
    <string name="version_download_complete">Downloaded <b>^1</b></string>
    <string name="mulai_mengunduh">Starting download…</string>
    <string name="mengunduh_nama">Downloading %s</string>
    <string name="tuju_v">Go to</string>
    <string name="bagikan_alamat">Share %s</string>
    <string name="search_selected_verse_copied">The selected verses have been copied.</string>
    <string name="alamat_sudah_disalin">%s has been copied.</string>
    <string name="alamat_tidak_sah_alamat">Invalid address: %s</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="anda_yakin_mau_menghapus_catatan_ini">Delete this note?</string>
    <string name="hapus_catatan">Delete note</string>
    <string name="catatan_alamat">Note on %s</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tidak_bisa_membuat_folder">Could not create folder %s</string>
    <string name="menuPengaturan">Settings</string>
    <string name="menuTentang">About</string>
    <string name="pengaturan_alkitab">Bible Settings</string>
    <string name="kelola_versi">Manage Versions</string>
    <string name="tambah">Add</string>
    <string name="versi_lainnya">Other versions</string>
    <string name="version_error_opening">Error opening %s.</string>
    <string name="pdb_file_options">PDB file options</string>
    <string name="greek_charset">Greek charset</string>
    <string name="hebrew_charset">Hebrew charset</string>
    <string name="pdb_encoding">PDB encoding</string>
    <string name="sample_text">Sample text</string>
    <string name="include_book_and_chapter_headers">Include book and chapter headers</string>
    <string name="select_all">Select all</string>
    <string name="cp_opening_pdb_file">Opening PDB file</string>
    <string name="cp_loading_version_info">Loading version info</string>
    <string name="cp_loading_word_index">Loading word index</string>
    <string name="cp_analyzing_available_books">Analyzing available books</string>
    <string name="cp_mapping_books">Mapping books</string>
    <string name="cp_constructing_book_info">Constructing book info</string>
    <string name="cp_constructing_version_info">Constructing version info</string>
    <string name="cp_writing_num_section_pericope_titles">Writing %s section/pericope titles</string>
    <string name="cp_writing_translated_file">Writing translated file</string>
    <string name="cp_reading_book_info">Reading book info: %s</string>
    <string name="cp_writing_text_of_book_chapters">Writing text of book %1$s (%2$s chapters)</string>
    <string name="ed_type_key">Type</string>
    <string name="ed_type_internal">Built-in</string>
    <string name="ed_type_preset">Downloadable</string>
    <string name="ed_type_db">Downloaded</string>
    <string name="ed_locale_locale">Language code</string>
    <string name="ed_shortName_shortName">Short name</string>
    <string name="ed_title_title">Title</string>
    <string name="ed_stored_in_file">File location</string>
    <string name="ed_default_filename_file">Preset name</string>
    <string name="ed_download_url_url">Download URL</string>
    <string name="ed_version_details">Version details</string>
    <string name="ed_choose_pdb_or_yes_file">Choose a .pdb or .yes file</string>
    <string name="ed_no_external_storage">No SD Card or USB storage found.</string>
    <string name="ed_invalid_file_selected">Invalid file selected.</string>
    <string name="ed_file_file_sudah_ada_dalam_daftar_versi">File %s is already on the list.</string>
    <string name="ed_error_encountered">Error encountered</string>
    <string name="ed_this_file_is_already_on_the_list">This file is already on the list.</string>
    <string name="ed_reading_pdb_file">Reading PDB file…</string>
    <string name="ed_finished">Finished.</string>
    <string name="ed_error_reading_pdb_file">Error reading PDB file</string>
    <string name="ed_details">Details: </string>
    <string name="ed_buka_file_pdb_yes_lainnya">Open a .pdb/.yes file…</string>
    <string name="ed_section_all">All</string>
    <string name="ed_section_downloaded">Downloaded</string>
    <string name="ed_download_button">Download</string>
    <string name="ed_update_button">Update</string>
    <string name="ed_details_update_available">Update available</string>
    <string name="ed_download_manager_not_enabled_prompt">The Download Manager app is not enabled or not available.\n\nEnable it to download Bible versions.</string>
    <string name="info_terperinci">Details</string>
    <string name="buang_dari_daftar">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="hapus_stabilo">Remove highlight</string>
    <string name="edit_note">Edit note</string>
    <string name="edit_highlight">Change highlight color</string>
    <string name="menuSort">Sort</string>
    <string name="menuSortCreateTime">Created date</string>
    <string name="menuSortModifyTime">Edited date</string>
    <string name="menuSortAri">Verse address</string>
    <string name="menuSortCaption">Title</string>
    <string name="menuSortCaption_color">Highlight color</string>
    <string name="create_edited_modified_time">%1$s\n(edited %2$s)</string>
    <string name="the_file_for_this_version_is_no_longer_available_file">The file for this version is no longer available. Remove this version from the list?\nFile: %s</string>
    <string name="create_label_title">Create label</string>
    <string name="do_you_want_to_remove_the_label_label_from_this_bookmark">"Remove the label '%s' from this bookmark?"</string>
    <string name="bl_clear_filter">Clear filter</string>
    <string name="fm_loading_ellipsis">Loading…</string>
    <string name="empty_bookmarks_title">Bookmark verses and passages</string>
    <string name="empty_bookmarks_msg">Bookmark help you keep track of verses you want to memorize, or mark as favorites. Return here to view, edit, or delete bookmark</string>
    <string name="retry">Retry</string>
    <string name="donate">Donate</string>
    <string name="image">Image</string>
    <string name="ad_remove_success_title">Ads have been turned off</string>
    <string name="ad_remove_success_msg">You\'ve subscribed to %s ad-free service.</string>
    <string name="rateus_dialog_cancle">No thanks</string>
    <string name="rateus_dialog_submit">Submit</string>
    <string name="rateus_submit_dialog_title">Thank you!</string>
    <string name="rateus_submit_dialog_msg">Rate 5 Stars in Google Play？</string>
    <string name="guide_tiitle">Bible Lock Screen</string>
    <string name="guide_tips1">Have the Verse of the Day delivered to your Lock Screen each morning.</string>
    <string name="guide_tips2">Give you a short and meaningful daily bible verse.</string>
    <string name="guide_tips3">Give you strength and inspiration every day.</string>
    <string name="try_it">TRY IT</string>
    <string name="not_now">Not Now</string>
</resources>