<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roboto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_connection_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/empty_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_empty_bookmark"
            android:visibility="visible" />

        <com.fw.basemodules.view.RobotoTextView
            android:id="@+id/tEmpty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/empty_bookmarks_title"
            android:textColor="@color/black_4c4c4c"
            android:textSize="@dimen/tv_size_16"
            android:visibility="visible" />

        <com.fw.basemodules.view.RobotoTextView
            android:id="@+id/msgEmpty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/empty_bookmarks_msg"
            android:textColor="@color/black_999999"
            android:textSize="@dimen/tv_size_12"
            android:visibility="visible" />

        <Button
            android:id="@+id/bClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bl_clear_filter"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.fw.basemodules.view.RobotoTextView
            android:id="@+id/pg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fm_loading_ellipsis"
            android:textColor="@color/black_333333" />
    </LinearLayout>

</RelativeLayout>