<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corners_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_16">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_32"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ratingbar_yes_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_6"
            android:text="@string/rateus_submit_dialog_title"
            android:textColor="@color/theme_color_accent"
            android:textSize="@dimen/tv_size_16"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/dialog_msg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_26"
        android:paddingLeft="@dimen/margin_20"
        android:paddingRight="@dimen/margin_20"
        android:text="@string/rateus_submit_dialog_msg"
        android:textColor="@color/black_333333"
        android:textSize="@dimen/margin_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/margin_26"
        android:background="@color/color_line"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_operation_layout_height"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:background="@drawable/cancel_btn_bg"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:text="@string/rateus_dialog_cancle"
            android:textAllCaps="true"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dialog_ok"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_weight="1"
            android:background="@drawable/feedback_btn_bg"
            android:gravity="center"
            android:minWidth="130dp"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:text="@string/rateus_dialog_submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_size_16" />

    </LinearLayout>

</LinearLayout>