<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d6d6d6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_30">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/highlight_types_list"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_44"
        android:layout_marginBottom="@dimen/margin_12"
        android:layout_marginLeft="@dimen/margin_24"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_12"
                android:paddingRight="@dimen/margin_12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/menuShare"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/tv_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/image_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_12"
                android:paddingRight="@dimen/margin_12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/image"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/tv_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bookmark_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_12"
                android:paddingRight="@dimen/margin_12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tambah_pembatas_buku"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/tv_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/note_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_12"
                android:paddingRight="@dimen/margin_12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tulis_catatan"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/tv_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/copy_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:paddingLeft="@dimen/margin_12"
                android:paddingRight="@dimen/margin_12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/salin_ayat"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/tv_size_14" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>


</LinearLayout>